- Fixed styling on mod overview page. - Fixed mod list scrolling on mod overview page. - Added scrollbar styles.

--- a/src/app/pages/mods-overview/mods-overview.page.scss
+++ b/src/app/pages/mods-overview/mods-overview.page.scss
@@ -1,15 +1,16 @@
 :host {
-    display: block;
+    display: flex;
     height: 100vh;
-    overflow: hidden;
+    max-height: 100vh;
+    align-items: stretch;
 
     #profile-controls {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        height: 100%;
         padding: 1.5rem;
+        flex-grow: 1;
 
         > * {
             flex: 1 1 100%;
@@ -19,11 +20,16 @@
         .control-card {
             width: 100%;
             height: 100%;
+
+            > mat-card-content {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                overflow-y: auto;
+            }
         }
 
         #profile-mod-list {
-            display: flex;
-            flex-direction: column;
 
             #profile-select-trigger {
                 display: flex;
@@ -66,11 +72,8 @@
             max-width: 768px;
 
             > mat-card-content {
-                display: flex;
-                flex-direction: column;
                 align-items: center;
                 justify-content: space-between;
-                height: 100%;
 
                 > .actions {
                     display: flex;
@@ -118,7 +121,6 @@
         }
 
         #game-actions {
-            margin-bottom: 3rem !important;
 
             #launch-game-button {
                 height: 5rem;
